--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-06 14:19+0400\n"
+"POT-Creation-Date: 2022-11-08 13:29+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,10 +19,38 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
-#: templates/base.html:10
+
+#: templates/base.html:9 templates/base.html:15
 msgid "Task manager"
 msgstr "Менеджер задач"
 
-#: templates/base.html:13
-msgid "main_title"
-msgstr "Привет, френд!"
+#: templates/base.html:22 templates/users/list.html:4
+msgid "Users"
+msgstr "Пользователи"
+
+#: templates/base.html:27
+msgid "Enter"
+msgstr "Вход"
+
+#: templates/base.html:30
+msgid "Register"
+msgstr "Регистрация"
+
+#: templates/users/list.html:7
+msgid "ID"
+msgstr "id"
+
+#: templates/users/list.html:8
+msgid "nick_name"
+msgstr "Имя пользователя"
+
+#: templates/users/list.html:9
+msgid "full_name"
+msgstr "Полное имя"
+
+#: templates/users/list.html:10
+msgid "created_at"
+msgstr "Дата создания"
+
+#~ msgid "main_title"
+#~ msgstr "Привет, френд!"
