--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-08 13:29+0400\n"
+"POT-Creation-Date: 2022-11-08 14:26+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -51,6 +51,14 @@ msgstr "Полное имя"
 #: templates/users/list.html:10
 msgid "created_at"
 msgstr "Дата создания"
+
+#: templates/users/list.html:21
+msgid "edit user"
+msgstr "Изменить"
+
+#: templates/users/list.html:24
+msgid "remove user"
+msgstr "Удалить"
 
 #~ msgid "main_title"
 #~ msgstr "Привет, френд!"
