--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -268,7 +268,7 @@ msgstr "Выход"
 
 #: templates/nav.html:31 views.py:22 views.py:23
 msgid "Enter"
-msgstr "Вход"
+msgstr "Войти"
 
 #: templates/nav.html:32 users/views.py:32 users/views.py:33
 msgid "Register"
