--- a/task_manager/users/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/users/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-12 12:50+0400\n"
+"POT-Creation-Date: 2022-12-12 13:14+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,129 +16,129 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
+"(n%100>=11 && n%100<=14)? 2 : 3);\n"
+
 #: users/forms.py:17 users/forms.py:32
 msgid "Password is too short"
 msgstr ""
+"Введённый пароль слишком короткий. Он должен содержать как минимум 3 символа."
 
 #: users/forms.py:19 users/forms.py:23
 msgid "Password"
-msgstr ""
+msgstr "Пароль"
 
 #: users/forms.py:24
 msgid "Password must contains at least 3 chars"
-msgstr ""
+msgstr "Ваш пароль должен содержать как минимум 3 символа."
 
 #: users/forms.py:29 users/forms.py:37
 msgid "Password confirmation"
-msgstr ""
+msgstr "Подтверждение пароля"
 
 #: users/forms.py:38
 msgid "Please, type your password again"
-msgstr ""
+msgstr "Подтверждение пароля"
 
 #: users/forms.py:53 users/forms.py:71
 msgid "first name"
-msgstr ""
+msgstr "Имя"
 
 #: users/forms.py:59 users/forms.py:72
 msgid "last name"
-msgstr ""
+msgstr "Фамилия"
 
 #: users/forms.py:65 users/forms.py:73 users/views.py:20
 msgid "username"
-msgstr ""
+msgstr "Имя пользователя"
 
 #: users/forms.py:66
 msgid "Not an option"
 msgstr ""
+"Обязательное поле. Не более 150 символов. Только буквы, цифры и символы @/./"
+"+/-/_."
 
 #: users/forms.py:81
 msgid "Passwords don't match"
-msgstr ""
+msgstr "Введенные пароли не совпадают."
 
 #: users/forms.py:87
 msgid "Username already exists"
-msgstr ""
+msgstr "Пользователь с таким именем уже существует."
 
 #: users/views.py:18
 msgid "Users"
-msgstr ""
+msgstr "Пользователи"
 
 #: users/views.py:19
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #: users/views.py:21
 msgid "full name"
-msgstr ""
+msgstr "Полное имя"
 
 #: users/views.py:22
 msgid "create at"
-msgstr ""
+msgstr "Дата создания"
 
 #: users/views.py:32
 msgid "Register"
-msgstr ""
+msgstr "Регистрация"
 
 #: users/views.py:33
 msgid "Register "
-msgstr ""
+msgstr "Зарегистрировать"
 
 #: users/views.py:35
 msgid "User created successfully"
-msgstr ""
+msgstr "Пользователь успешно зарегистрирован"
 
 #: users/views.py:53
 msgid "Edit user"
-msgstr ""
+msgstr "Изменение пользователя"
 
 #: users/views.py:54
 msgid "Update"
-msgstr ""
+msgstr "Изменить"
 
 #: users/views.py:58
 msgid "User update successfully"
-msgstr ""
+msgstr "Пользователь успешно изменён"
 
-#: users/views.py:62
-msgid "Please fill form correctly"
-msgstr ""
-
-#: users/views.py:73
+#: users/views.py:69
 msgid "You cannot edit another user"
-msgstr ""
+msgstr "У вас нет прав для изменения другого пользователя."
 
-#: users/views.py:75
+#: users/views.py:71
 msgid "Please login to modify user"
-msgstr ""
+msgstr "Вы не авторизованы! Пожалуйста, выполните вход."
 
-#: users/views.py:89
+#: users/views.py:85
 msgid "Remove user"
-msgstr ""
+msgstr "Удаление пользователя"
 
-#: users/views.py:90
+#: users/views.py:86
 msgid "Remove"
-msgstr ""
+msgstr "Да, удалить"
 
-#: users/views.py:91
+#: users/views.py:87
 msgid "Are you sure delete"
-msgstr ""
+msgstr "Вы уверены, что хотите удалить "
 
-#: users/views.py:103
+#: users/views.py:99
 msgid "You cannot delete another user"
-msgstr ""
+msgstr "У вас нет прав для изменения другого пользователя."
 
-#: users/views.py:105
+#: users/views.py:101
 msgid "Please login to delete user"
-msgstr ""
+msgstr "Вы не авторизованы! Пожалуйста, выполните вход."
 
-#: users/views.py:118
+#: users/views.py:114
 msgid "User can't be deleted - on use now"
-msgstr ""
+msgstr "Невозможно удалить пользователя, потому что он используется"
 
-#: users/views.py:120
+#: users/views.py:116
 msgid "User was successfully deleted"
-msgstr ""
+msgstr "Пользователь успешно удалён"
