--- a/task_manager/tasks/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/tasks/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-12 12:50+0400\n"
+"POT-Creation-Date: 2022-12-12 16:13+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,133 +16,138 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
-#: tasks/filters.py:13 tasks/views.py:51
-msgid "Status"
-msgstr ""
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
+"(n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-#: tasks/filters.py:17
+#: tasks/filters.py:13 tasks/views.py:48
+msgid "Status"
+msgstr "Статус"
+
+#: tasks/filters.py:17 tasks/views.py:50
 msgid "Performer"
-msgstr ""
+msgstr "Исполнитель"
 
 #: tasks/filters.py:21
 msgid "Mark"
-msgstr ""
+msgstr "Метка"
 
 #: tasks/filters.py:26
 msgid "Only self tasks"
-msgstr ""
+msgstr "Только свои задачи"
 
-#: tasks/forms.py:24 tasks/forms.py:54 tasks/views.py:50
-msgid "name"
-msgstr ""
+#: tasks/forms.py:24 tasks/forms.py:53 tasks/views.py:47
+msgid "Name"
+msgstr "Имя"
 
-#: tasks/forms.py:30 tasks/forms.py:55
+#: tasks/forms.py:30 tasks/forms.py:54
 msgid "description"
-msgstr ""
+msgstr "Описание"
 
-#: tasks/forms.py:56 tasks/views.py:125
+#: tasks/forms.py:55 tasks/views.py:118
 msgid "status"
-msgstr ""
+msgstr "Статус"
 
-#: tasks/forms.py:57 tasks/views.py:53 tasks/views.py:124
+#: tasks/forms.py:56 tasks/views.py:117
 msgid "performer"
-msgstr ""
+msgstr "Исполнитель"
 
-#: tasks/forms.py:58
+#: tasks/forms.py:57
 msgid "Marks"
-msgstr ""
+msgstr "Метки"
 
 #: tasks/views.py:22
 msgid "Add Task"
-msgstr ""
+msgstr "Создать задачу"
 
 #: tasks/views.py:23
 msgid "Create"
-msgstr ""
+msgstr "Создать"
 
 #: tasks/views.py:29
 msgid "Task created successfully"
-msgstr ""
+msgstr "Задача успешно создана"
 
-#: tasks/views.py:33 tasks/views.py:78
-msgid "Please fill form correctly"
-msgstr ""
-
-#: tasks/views.py:37
+#: tasks/views.py:34
 msgid "Please login to create tasks"
-msgstr ""
+msgstr "Вы не авторизованы! Пожалуйста, выполните вход."
 
-#: tasks/views.py:47
+#: tasks/views.py:44
 msgid "Select"
-msgstr ""
+msgstr "Показать"
 
-#: tasks/views.py:48
+#: tasks/views.py:45
 msgid "Tasks"
-msgstr ""
+msgstr "Задачи"
+
+#: tasks/views.py:46
+msgid "ID"
+msgstr "ID"
 
 #: tasks/views.py:49
-msgid "ID"
-msgstr ""
+#, fuzzy
+#| msgid "author"
+msgid "Author"
+msgstr "Автор"
 
-#: tasks/views.py:52 tasks/views.py:123
-msgid "author"
-msgstr ""
+#: tasks/views.py:51
+#, fuzzy
+#| msgid "created at"
+msgid "Created at"
+msgstr "Дата создания"
 
-#: tasks/views.py:54
-msgid "created at"
-msgstr ""
-
-#: tasks/views.py:58 tasks/views.py:131
+#: tasks/views.py:55 tasks/views.py:124
 msgid "Please login to view tasks"
-msgstr ""
+msgstr "Вы не авторизованы! Пожалуйста, выполните вход."
 
-#: tasks/views.py:69
+#: tasks/views.py:66
 msgid "Edit task"
-msgstr ""
+msgstr "Изменить"
 
-#: tasks/views.py:70
+#: tasks/views.py:67
 msgid "Update"
-msgstr ""
+msgstr "Изменить"
 
-#: tasks/views.py:74
+#: tasks/views.py:71
 msgid "Task update successfully"
-msgstr ""
+msgstr "Задача успешно изменена"
 
-#: tasks/views.py:87
+#: tasks/views.py:80
 msgid "Remove task"
-msgstr ""
+msgstr "Удаление задачи"
 
-#: tasks/views.py:88
+#: tasks/views.py:81
 msgid "Remove"
-msgstr ""
+msgstr "Да, удалить"
 
-#: tasks/views.py:89
+#: tasks/views.py:82
 msgid "Are you sure delete task "
-msgstr ""
+msgstr "Вы уверены, что хотите удалить"
 
-#: tasks/views.py:102
+#: tasks/views.py:95
 msgid "You cannot delete another user tasks"
-msgstr ""
+msgstr "Задачу может удалить только её автор"
 
-#: tasks/views.py:104
+#: tasks/views.py:97
 msgid "Please login to delete tasks"
-msgstr ""
+msgstr "Вы не авторизованы! Пожалуйста, выполните вход."
 
-#: tasks/views.py:113
+#: tasks/views.py:106
 msgid "Task was successfully deleted"
-msgstr ""
+msgstr "Задача успешно удалена"
 
-#: tasks/views.py:122
+#: tasks/views.py:115
 msgid "Task view"
-msgstr ""
+msgstr "Просмотр задачи"
 
-#: tasks/views.py:126
+#: tasks/views.py:116
+msgid "author"
+msgstr "Автор"
+
+#: tasks/views.py:119
 msgid "created"
-msgstr ""
+msgstr "Дата создания"
 
-#: tasks/views.py:127
+#: tasks/views.py:120
 msgid "marks"
-msgstr ""
+msgstr "Метки"
