--- a/task_manager/marks/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/marks/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-12 12:50+0400\n"
+"POT-Creation-Date: 2022-12-12 16:31+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,69 +16,69 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
+"(n%100>=11 && n%100<=14)? 2 : 3);\n"
+
 #: marks/forms.py:17 marks/forms.py:22 marks/views.py:35
-msgid "name"
-msgstr ""
+msgid "Name"
+msgstr "Имя"
 
 #: marks/views.py:19
-msgid "create mark"
-msgstr ""
+msgid "Create mark"
+msgstr "Создать метку"
 
 #: marks/views.py:20
-msgid "create"
-msgstr ""
+msgid "Create"
+msgstr "Создать"
 
 #: marks/views.py:24
 msgid "Mark created successfully"
-msgstr ""
+msgstr "Метка успешно создана"
 
 #: marks/views.py:33
-msgid "marks"
-msgstr ""
+msgid "Marks"
+msgstr "Метки"
 
 #: marks/views.py:34
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #: marks/views.py:36
-msgid "created at"
-msgstr ""
+msgid "Created at"
+msgstr "Дата создания"
 
 #: marks/views.py:47
-msgid "update mark"
-msgstr ""
+msgid "Update mark"
+msgstr "Изменение метки"
 
 #: marks/views.py:48
-msgid "update"
-msgstr ""
+msgid "Update"
+msgstr "Изменить"
 
 #: marks/views.py:52
 msgid "Mark updated successfully"
-msgstr ""
+msgstr "Метка успешно изменена"
 
-#: marks/views.py:56
-msgid "Mark name already exists"
-msgstr ""
-
-#: marks/views.py:66
+#: marks/views.py:62
 msgid "Remove mark"
-msgstr ""
+msgstr "Удаление метки"
 
-#: marks/views.py:67
-msgid "Remove"
-msgstr ""
+#: marks/views.py:63
+msgid "Yes, remove"
+msgstr "Да, удалить"
 
-#: marks/views.py:68
+#: marks/views.py:64
 msgid "Are you sure delete"
-msgstr ""
+msgstr "Вы уверены, что хотите удалить"
 
-#: marks/views.py:77
+#: marks/views.py:73
 msgid "Mark can't be deleted - on use now"
-msgstr ""
+msgstr "Невозможно удалить метку, потому что она используется"
 
-#: marks/views.py:79
+#: marks/views.py:75
 msgid "Mark was deleted successfully"
-msgstr ""
+msgstr "Метка успешно удалена"
+
+#~ msgid "Remove"
+#~ msgstr "Да, удалить"
