--- a/task_manager/statuses/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/statuses/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-12 12:50+0400\n"
+"POT-Creation-Date: 2022-12-12 16:18+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,69 +16,66 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
+"(n%100>=11 && n%100<=14)? 2 : 3);\n"
+
 #: statuses/forms.py:15 statuses/forms.py:20 statuses/views.py:20
-msgid "name"
-msgstr ""
+msgid "Name"
+msgstr "Имя"
 
 #: statuses/views.py:18
-msgid "statuses"
-msgstr ""
+msgid "Statuses"
+msgstr "Статусы"
 
 #: statuses/views.py:19
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #: statuses/views.py:21
-msgid "created at"
-msgstr ""
+msgid "Created at"
+msgstr "Дата создания"
 
 #: statuses/views.py:31
-msgid "create status"
-msgstr ""
+msgid "Create status"
+msgstr "Создать статус"
 
 #: statuses/views.py:32
-msgid "create"
-msgstr ""
+msgid "Create"
+msgstr "Создать"
 
 #: statuses/views.py:36
 msgid "Status created successfully"
-msgstr ""
+msgstr "Статус успешно создан"
 
 #: statuses/views.py:47
-msgid "update status"
-msgstr ""
+msgid "Update status"
+msgstr "Изменение статуса"
 
 #: statuses/views.py:48
-msgid "update"
-msgstr ""
+msgid "Update"
+msgstr "Изменить"
 
 #: statuses/views.py:52
 msgid "Status updated successfully"
-msgstr ""
+msgstr "Статус успешно изменён"
 
-#: statuses/views.py:56
-msgid "Status name already exists"
-msgstr ""
-
-#: statuses/views.py:66
+#: statuses/views.py:62
 msgid "Remove status"
-msgstr ""
+msgstr "Удаление статуса"
 
-#: statuses/views.py:67
+#: statuses/views.py:63
 msgid "Remove"
-msgstr ""
+msgstr "Да, удалить"
 
-#: statuses/views.py:68
+#: statuses/views.py:64
 msgid "Are you sure delete"
-msgstr ""
+msgstr "Вы уверены, что хотите удалить"
 
-#: statuses/views.py:77
+#: statuses/views.py:73
 msgid "Status can't be deleted - on use now"
-msgstr ""
+msgstr "Невозможно удалить статус, потому что он используется"
 
-#: statuses/views.py:79
-msgid "status was deleted successfully"
-msgstr ""
+#: statuses/views.py:75
+msgid "Status was deleted successfully"
+msgstr "Статус успешно удалён"
