--- a/task_manager/users/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/users/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-12 13:56+0400\n"
+"POT-Creation-Date: 2022-12-12 16:38+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -124,12 +124,12 @@ msgid "Remove user"
 msgstr "Удаление пользователя"
 
 #: users/views.py:86
-msgid "Remove"
+msgid "Yes, remove"
 msgstr "Да, удалить"
 
 #: users/views.py:87
 msgid "Are you sure delete"
-msgstr "Вы уверены, что хотите удалить "
+msgstr "Вы уверены, что хотите удалить"
 
 #: users/views.py:99
 msgid "You cannot delete another user"
